Single vertex sliding crashes #78900

Closed
opened 2020-07-14 00:19:30 +02:00 by Lincoln Deen · 7 comments

System Information
Operating system: Linux-5.7.8-200.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-13 15:53, hash: 2b5e21fe00
Worked: Blender 2.83b

Short description of error
When both in multi-object edit mode and having proportional editing enabled, attempting to slide a single vertex (G) results in an instant crash.
Sliding a multiple-vertex selection (either connected or separate) or using other selection modes (edge select or face select) does not show the same issue.

Exact steps for others to reproduce the error
Create two objects, and enter multi-object edit mode with both of them selected. Enable proportional editing, and then slide a single vertex in any direction.

**System Information** Operating system: Linux-5.7.8-200.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-13 15:53, hash: `2b5e21fe00` Worked: Blender 2.83b **Short description of error** When both in multi-object edit mode and having proportional editing enabled, attempting to slide a single vertex (G) results in an instant crash. Sliding a multiple-vertex selection (either connected or separate) or using other selection modes (edge select or face select) does not show the same issue. **Exact steps for others to reproduce the error** Create two objects, and enter multi-object edit mode with both of them selected. Enable proportional editing, and then slide a single vertex in any direction.
Author

Added subscriber: @Lincoln

Added subscriber: @Lincoln
Member

Added subscribers: @mano-wii, @HooglyBoogly

Added subscribers: @mano-wii, @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report.

@mano-wii I wonder if this relates to some of the refactoring you were doing recently. It doesn't happen if the vertices are connected in any way. Curious that it only happens in multi-object edit mode too.

Thanks for the report. @mano-wii I wonder if this relates to some of the refactoring you were doing recently. It doesn't happen if the vertices are connected in any way. Curious that it only happens in multi-object edit mode too.

My guess is that the problem was introduced by a64b8aca.
The real problem is that the vert slide code is unstable.
Submitting a fix...

My guess is that the problem was introduced by a64b8aca. The real problem is that the vert slide code is unstable. Submitting a fix...

This issue was referenced by 1e5ce39156

This issue was referenced by 1e5ce391563f48c487862e5f05c6517e98a42e21

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-07-14 14:33:35 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78900
No description provided.